Fix html template, add collapsable panel

--- a/styles/cordova-de-debugger.less
+++ b/styles/cordova-de-debugger.less
@@ -183,3 +183,7 @@
 .flex-inner li {
   width: 100px;
 }
+
+.body-collapsed {
+  display: none;
+}
